--- a/about.html
+++ b/about.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>OrchardAid</title>
+  <title>About OrchardAid</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to OrchardAid</h1>
+    <h1>About Us</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -16,11 +16,11 @@
     </nav>
   </header>
   <main>
-    <h2>Grow With Us</h2>
-    <p>OrchardAid is a space for reflection, empowerment, and conscious connection. Step into the Orchard and join us on a journey toward peace, innovation, and digital growth.</p>
+    <h2>Our Roots</h2>
+    <p>OrchardAid was born from a vision of intelligent peace. We believe technology can nurture rather than dominate, and we're creating digital spaces that reflect this truth.</p>
   </main>
   <footer>
-    <p>&copy; 2025 OrchardAid. All rights reserved.</p>
+    <p>&copy; 2025 OrchardAid</p>
   </footer>
 </body>
 </html>
