--- a/donate.html
+++ b/donate.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>OrchardAid</title>
+  <title>Donate to OrchardAid</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to OrchardAid</h1>
+    <h1>Support the Orchard</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -16,11 +16,12 @@
     </nav>
   </header>
   <main>
-    <h2>Grow With Us</h2>
-    <p>OrchardAid is a space for reflection, empowerment, and conscious connection. Step into the Orchard and join us on a journey toward peace, innovation, and digital growth.</p>
+    <h2>Every Seed Counts</h2>
+    <p>You can support our mission by donating crypto directly:</p>
+    <p><strong>MetaMask Wallet:</strong> 0x8253e93E6d18081C76Dd77f9698D8BE47a5e034a</p>
   </main>
   <footer>
-    <p>&copy; 2025 OrchardAid. All rights reserved.</p>
+    <p>&copy; 2025 OrchardAid</p>
   </footer>
 </body>
 </html>
