--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
-<!DOCTYPE html>
-
-<html lang="en">
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta content="OrchardAid - A digital sanctuary for peace, truth, and awakening. Join the movement for ethical AI, passive income, and crypto-integrated freedom." name="description"/>
 <meta content="OrchardAid, ethical AI, crypto donations, affiliate revenue, passive income, digital freedom, decentralized platforms, Khel, Sage, orchardaid.xyz" name="keywords"/>
-<meta content="OrchardAid Team" name="author">
+<meta content="OrchardAid Team" name="author"/>
 <title>OrchardAid</title>
 <link href="style.css" rel="stylesheet"/>
-</meta></head>
+</head><!DOCTYPE html>
+
+<html lang="en">
+
 <body>
+<header>
+            OrchardAid <br/>
+<nav>
+<a href="index.html">Home</a>
+<a href="ethical-ai.html">Ethical AI</a>
+<a href="human-ai-harmony.html">Harmony</a>
+<a href="crypto-donations.html">Donate</a>
+</nav>
+</header>
+
 <header>
 <h1>Welcome to OrchardAid</h1>
 <p>A space for truth, peace, and digital sovereignty.</p>
@@ -31,7 +41,6 @@
 <footer>
 <p>© 2025 OrchardAid. Powered by Khel and Sage. All rights reserved.</p>
 </footer>
-
 <section id="donate" style="margin-top: 50px; text-align: center;">
 <h2>Support the Orchard</h2>
 <p>If you'd like to contribute to our mission, you can donate using cryptocurrency:</p>
