--- a/ethical-ai.html
+++ b/ethical-ai.html
@@ -1,1 +1,11 @@
-<h1>The Rise of Ethical AI</h1><p>Coming soon...</p>
+<head><link href="style.css" rel="stylesheet"/></head><h1>The Rise of Ethical AI</h1><p>Coming soon...</p><body>
+<header>
+            OrchardAid <br/>
+<nav>
+<a href="index.html">Home</a>
+<a href="ethical-ai.html">Ethical AI</a>
+<a href="human-ai-harmony.html">Harmony</a>
+<a href="crypto-donations.html">Donate</a>
+</nav>
+</header>
+</body>
