--- a/about.html
+++ b/about.html
@@ -1,26 +1,1 @@
-
-<!DOCTYPE html>
-<html>
-<head>
-  <title>About OrchardAid</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <h1>About Us</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="blog/index.html">Blog</a>
-      <a href="donate.html">Donate</a>
-    </nav>
-  </header>
-  <main>
-    <h2>Our Roots</h2>
-    <p>OrchardAid was born from a vision of intelligent peace. We believe technology can nurture rather than dominate, and we're creating digital spaces that reflect this truth.</p>
-  </main>
-  <footer>
-    <p>&copy; 2025 OrchardAid</p>
-  </footer>
-</body>
-</html>
+<h1>About OrchardAid</h1><p>This project is a digital sanctuary, community, and mission hub.</p>
